--- a/JSPProject2/src/main/webapp/index.html
+++ b/JSPProject2/src/main/webapp/index.html
@@ -33,6 +33,27 @@
                     ** 형제 요소는 이름만 부르면 접근할 수 있다!
                  -->
         </li>
+
+        <li>
+            <a href="jstl">3. JSTL</a>
+        </li>
+
+        <li>
+            <!-- 
+                현재 페이지 주소 : /JSPProject2/index.html
+                목표 페이지 주소 : /JSPProject2/student/selectAll
+            -->
+            <a href="student/selectAll">4. 학생 전체 조회</a>
+        </li>
+
+
+        <li>
+            <form action="student/selectDepartment">
+                학과명 : <input type="text" name="inputDept">
+                <button>검색</button>
+            </form>
+        </li>
+
     </ul>
 
 
